# pdf-txt

./: .gitignore  CLI_USAGE.md  QINGLONG-GUIDE.md  README.md  TERMINAL-QUICK-START.md  docker-compose.yml  index.html  nginx-qinglong.conf  pdf_extractor.py  pdf_extractor_config.example.json  proxy.html  pyproject.toml  qinglong-deploy.sh  requirements.txt  script.js  style.css  terminal-Dockerfile  terminal-config.json  terminal-deploy.sh  terminal-deployment-solution.md  terminal-docker-compose.yml  tetris.html  xianyu-helper.html  思考致富-核心内容.json  思考致富-核心内容.txt  智能投资者-核心内容.json  智能投资者-核心内容.txt
.kiro/specs/pdf-text-extractor/: design.md  (+2 more)
doc/: progress.md
docs/: CONFIGURATION.md  LOGGING.md  README.md  TASKS_11_SUMMARY.md
examples/: README.md  advanced_usage.py  basic_usage.py  cli_examples.bat  cli_examples.sh  create_sample_pdf.py
netlify-proxy/: index.html  package.json
src/: __init__.py  cli.py  config.py  exceptions.py  key_info_analyzer.py  logger.py  models.py  output_formatter.py  path_handler.py  pdf_extraction_service.py  pdf_reader.py  text_extractor.py
tests/: test_cli.py  test_cli_integration.py  test_config.py  test_exceptions.py  test_key_info_analyzer.py  test_key_info_integration.py  test_logger.py  test_models.py  test_output_formatter.py  test_path_handler.py  test_pdf_extraction_service.py  test_pdf_reader.py  test_text_extractor.py
website-accessibility-fix/: README.md  main.py  requirements.txt
website-accessibility-fix/config/: default.yaml
website-accessibility-fix/src/: __init__.py
website-accessibility-fix/tests/: __init__.py
(+25 files in other folders)
